--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-console
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ZAST Family Feud</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="logo-container">
+    <div class="zast-title">ZAST</div>
+    <div class="feud-logo">Family Feud</div>
+  </div>
+  <button onclick="startGame()">Start Game</button>
+
+  <script>
+    function startGame() {
+      window.location.href = "game.html"; // link to your actual game
+    }
+  </script>
+</body>
+</html>
