--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-console
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>ZAST Family Feud</title>
+  <style>
+      body {
+          background-image: url("https://images.gem.cbc.ca/v1/synps-cbc/show/perso/cbc_family_feud_canada_ott_background_v05.jpg?impolicy=ott&im");
+          background-size:100%;
+          background-repeat: no-repeat ;
+      }
+      .center-content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 15px; 
+      }
+      
+      .button {
+          padding:15px;
+          text-decoration:none;
+          transition:0.3s ease-in;
+      }
+
+  </style>
+  <body>
+      <div class="">
+          <img src="images/logo.png" width="400">
+          <div class="button">
+            <button><a href="pageRegle.html"><b>Débute!</b></a></button>
+          </div>
+      </div>
+  </body>
+</head>
+</html>
